# txtat

./: LICENSE.txt  README.md  pyproject.toml  txtat.bat
txtat/: __init__.py  __main__.py
